--- a/app/views/project/softwareTab.html
+++ b/app/views/project/softwareTab.html
@@ -69,7 +69,7 @@
         <div id="bloqs--field" ng-class="{'theme-colors':currentProject.defaultTheme === 'infotab_option_colorTheme', 'theme-basic':currentProject.defaultTheme === 'infotab_option_grayTheme' || !currentProject.defaultTheme}" class="field" tabindex="0">
             <!-- From here testing block -->
             <!-- TODO: Collapse button does not work -->
-            <div class="bloq bloq--group bloq-vars">
+            <div class="bloq bloq--group bloq-vars blocklyDiv">
                 <div class="field--header"><button class="btn btn--collapsefield"></button><h3 data-i18n="bloq-var-header">{{ 'bioblocks_editor_field_title' | translate }}</h3></div>
                 <!-- Scrip tags to load the code that is needed in blockly just in case it's erased from index.html -->
                 <script src="bower_components/closure-library/closure/goog/base.js"></script>
@@ -77,6 +77,7 @@
                 <script src="bower_components/blockly/demos/blockfactory/factory_utils.js"></script>
                 <script src="bower_components/blockly/demos/blockfactory/factory.js"></script>
                 <script src="bower_components/bioblocks-editor/data/editor_blocks.js"></script>
+                <script src="bower_components/bioblocks-editor/data/BioCoder/Biocoder_Blocks.js"></script>
                 <script src="bower_components/bioblocks-editor/editor.js"></script>
                 <table hidden>
                   <tr>
@@ -152,7 +153,7 @@
                 </div>
             </div> 
             <!-- End testing block -->
-            <div data-ng-class="{'toolbox--main':true,'navbar--collapsed':collapsedHeader, 'toolbox--expand':selectedBloqsToolbox!==''}" data-ng-include="'views/project/bloqsToolbox.html'"></div>
+            <div hidden data-ng-class="{'toolbox--main':true,'navbar--collapsed':collapsedHeader, 'toolbox--expand':selectedBloqsToolbox!==''}" data-ng-include="'views/project/bloqsToolbox.html'"></div>
         </div>
         <div id="empty"></div>
         <div id="bloqs-context-menu">
